Add card rendering

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <!--python3 -m http.server 3000-->
   </head>
   <body>
-    <div id="p1-cards"></div>
-    <div id="deck"></div>
-    <div id="p2-cards"></div>
+    <div id="p0-cards">a</div>
+    <div id="deck">b</div>
+    <div id="p1-cards">c</div>
   </body>
 </html>
