Some analysis on skips

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <title>Exploding Kittens</title>
     <script type="module" src="main.js" defer></script>
     <link rel="stylesheet" href="main.css" />
+    <!--link rel="favicon" type="image/png" href="./Assets/explode.png"> <!-Does this do anything? This is supposed to give a favicon-->
     <!--python3 -m http.server 3000-->
+    <!-- ctrl-shift-r to refresh everything if browser is caching files -->
   </head>
   <body>
     <div id="p0-cards">a</div>
