--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="p0-cards">a</div>
-    <div id="deck">b</div>
+    <div id="table"></div>
     <div id="p1-cards">c</div>
   </body>
 </html>
