Update display a little

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
     <!-- ctrl-shift-r to refresh everything if browser is caching files -->
   </head>
   <body>
-    <div id="p0-cards">a</div>
-    <div id="table"></div>
-    <div id="p1-cards">c</div>
+    <div id="p0-cards" class="cardHolder">
+      <!--placeholder-->
+      <img class="card" src="Assets/empty.png">
+    </div>
+    <div id="table" class="cardHolder">
+      <!--placeholder-->
+      <img class="card" src="Assets/empty.png">
+    </div>
+    <div id="p1-cards" class="cardHolder">
+      <!--placeholder-->
+      <img class="card" src="Assets/empty.png">
+    </div>
   </body>
 </html>
