--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
     <div id="table" class="cardHolder">
       <!--placeholder-->
-      <img class="card" src="Assets/empty.png">
+      <img id="deck" class="card" src="Assets/empty.png">
     </div>
     <div id="p1-cards" class="cardHolder">
       <!--placeholder-->
