Improve game display

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <div id="table" class="cardHolder">
       <!--placeholder-->
       <img id="deck" class="card" src="Assets/empty.png">
+      <span id="deckLength">???</span>
+      <img id="discard" class="card" src="Assets/empty.png">
+      <span id="discardLength">???</span>
+      <span id="turn-display">Player <span id="turn">?</span>'s Turn</span>
     </div>
     <div id="p1-cards" class="cardHolder">
       <!--placeholder-->
