Improve table display again

--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
     </div>
     <div id="table" class="cardHolder">
       <!--placeholder-->
-      <img id="deck" class="card" src="Assets/empty.png">
-      <span id="deckLength">???</span>
-      <img id="discard" class="card" src="Assets/empty.png">
-      <span id="discardLength">???</span>
-      <span id="turn-display">Player <span id="turn">?</span>'s Turn</span>
+      <div class="table-item">
+        <img id="deck" class="card" src="Assets/empty.png">
+        <div class="count-display"><span id="deckLength">???</span></div>
+      </div>
+      <div class="table-item">
+        <img id="discard" class="card" src="Assets/empty.png">
+        <div class="count-display"><span id="discardLength">???</span></div>
+      </div>
+      <div class="table-item">
+        <img id="turn-direction" class="card" src="Assets/empty.png">
+        <div class="count-display"><span id="turn-display">Player <span id="turn">?</span>'s Turn</span></div>
+      </div>
     </div>
     <div id="p1-cards" class="cardHolder">
       <!--placeholder-->
