--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
       <!--placeholder-->
       <img class="card" src="Assets/empty.png">
     </div>
+    <div id="notifications"></div>
   </body>
 </html>
