Add event log title

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <!--placeholder-->
       <img class="card" src="Assets/empty.png">
     </div>
+    <div style="padding-top: 30px;"><div id="notif-title">Event Log</div></div>
     <div id="notifications"></div>
   </body>
 </html>
